--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue3-apexcharts": "^1.5.2",
     "vue3-perfect-scrollbar": "^2.0.0",
     "vuetify": "3.6.13",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "axios": "1.7.3"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.43.1",
