--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^10.5.0",
     "@vueuse/math": "^10.5.0",
     "apexcharts": "3.51.0",
+    "axios": "^1.7.3",
     "pinia": "^2.1.7",
     "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
@@ -28,8 +29,7 @@
     "vue3-apexcharts": "^1.5.2",
     "vue3-perfect-scrollbar": "^2.0.0",
     "vuetify": "3.6.13",
-    "webfontloader": "^1.6.28",
-    "axios": "1.7.3"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.43.1",
