--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue3-apexcharts": "^1.5.2",
     "vue3-perfect-scrollbar": "^2.0.0",
     "vuetify": "3.6.13",
+    "vxe-table": "^4.6.18",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
