--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "roboto-fontface": "^0.10.0",
     "vue": "^3.3.4",
     "vue-flatpickr-component": "11.0.5",
+    "vue-multiselect": "^3.0.0",
     "vue-prism-component": "^2.0.0",
     "vue-router": "^4.3.0",
     "vue3-apexcharts": "^1.5.2",
