--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue3-perfect-scrollbar": "^2.0.0",
     "vuetify": "3.6.13",
     "vxe-table": "^4.6.18",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.43.1",
